--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="/shripal 5.jpg" alt="">
+                    <img src="shripal 5.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Shripal and I'm a <span>Bullet Rider</span></div>
@@ -175,35 +175,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="/shripal 5.jpg" alt="">
+                        <img src="shripal 5.jpg" alt="">
                         <div class="text">Shripal Menariya</div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, ipsa.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/shripal 3.jpg" alt="">
+                        <img src="shripal 3.jpg" alt="">
                         <div class="text">Shripal Menariya</div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, ipsa.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/shripal 4.jpg" alt="">
+                        <img src="shripal 4.jpg" alt="">
                         <div class="text">Shripal Menariya</div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, ipsa.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/shripal 7.jpg" alt="">
+                        <img src="shripal 7.jpg" alt="">
                         <div class="text">Shripal Menariya</div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, ipsa.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/shripal 8.jpg" alt="">
+                        <img src="shripal 8.jpg" alt="">
                         <div class="text">Shripal Menariya</div>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas, ipsa.</p>
                     </div>
